# UI_cw2

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cw2  cw2.cbp  cw2_automoc.cpp  mySlider.cpp  mySlider.h  one.cpp  one.h  pages.cpp  pages.h  sysWindow.cpp  sysWindow.h  the_button.cpp  the_button.h  the_player.cpp  the_player.h  three.cpp  three.h  tomeo.cpp  two.cpp  two.h
